Prevent unstuck footer

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -22,6 +22,7 @@ ol {
 
 main {
   @include flexCenter(column);
+  min-height: 100vh;
 }
 
 img {
